--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ branding:
 inputs:
   version:
     description: "The version of SDL2_image that will be downloaded"
-    required: true
+    required: false
     default: 2.0.5
 
   sources_destination:
@@ -23,23 +23,25 @@ runs:
   using: "composite"
   steps:
     - name: Download sources
-      run: Invoke-WebRequest -Uri "https://www.libsdl.org/projects/SDL_image/release/SDL2_image-devel-${{inputs.version}}-VC.zip" -OutFile ${{inputs.sources_destination}}/SDL2_image-devel-${{inputs.version}}-VC.zip
       shell: powershell
+      run: Invoke-WebRequest -Uri "https://www.libsdl.org/projects/SDL_image/release/SDL2_image-devel-${{inputs.version}}-VC.zip" `
+                             -OutFile ${{inputs.sources_destination}}/SDL2_image-devel-${{inputs.version}}-VC.zip
 
     - name: Unzip sources
+      shell: cmd
       run: |
         cd ${{inputs.sources_destination}}
         7z x -y SDL2_image-devel-${{inputs.version}}-VC.zip
         del SDL2_image-devel-${{inputs.version}}-VC.zip
-      shell: cmd
 
     - name: Download runtime binaries
-      run: Invoke-WebRequest -Uri "https://www.libsdl.org/projects/SDL_image/release/SDL2_image-${{inputs.version}}-win32-x64.zip" -OutFile ${{inputs.binaries_destination}}/SDL2_image-${{inputs.version}}-win32-x64.zip
+      run: Invoke-WebRequest -Uri "https://www.libsdl.org/projects/SDL_image/release/SDL2_image-${{inputs.version}}-win32-x64.zip" `
+                             -OutFile ${{inputs.binaries_destination}}/SDL2_image-${{inputs.version}}-win32-x64.zip
       shell: powershell
 
     - name: Unzip runtime binaries archive
+      shell: cmd
       run: |
         cd ${{inputs.binaries_destination}}
         7z x -y SDL2_image-${{inputs.version}}-win32-x64.zip
         del SDL2_image-${{inputs.version}}-win32-x64.zip
-      shell: cmd
