--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,7 @@ jobs:
         shell: cmd
 
       - name: Download SDL2
-        uses: albin-johansson/download-sdl2-image@v0.1
+        uses: albin-johansson/download-sdl2-image@latest
         with:
-          version: 2.0.5
           sources_destination: .
           binaries_destination: bin
